--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "test": "jest",
     "test:solution": "docker-compose build && docker-compose run --rm api npm test && docker-compose down"
   },
-  "keywords": [
-    "heroku"
-  ],
+  "keywords": [],
   "author": "caleb-holm",
   "license": "ISC",
   "dependencies": {
